k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: newbank-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
